--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddContactActivity"></activity>
+        <activity android:name=".EditContactActivity"></activity>
+        <activity android:name=".AddContactActivity" />
         <activity android:name=".ContactsActivity" />
         <activity
             android:name=".MainActivity"
